--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "element-ui": "^2.13.2",
     "highlight.js": "^11.2.0",
     "js-cookie": "^3.0.0",
+    "live2d-widget": "^3.1.4",
     "lodash": "^4.17.21",
     "marked": "^2.1.3",
     "md5": "^2.3.0",
